# zebrafish

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  deny.toml  docker-compose.yml  rust-toolchain.toml  typos.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  image.yml  nightly.yml  release.yml  rust-checks.yml
ci/: guardrails.sh
ci/sdk-verifiers/go/: go.mod  go.sum  main.go
ci/sdk-verifiers/node/: package-lock.json  package.json  verify.mjs
crates/core/: Cargo.toml
crates/core/openapi/: README.md
crates/core/src/: cards.rs  diff.rs  error.rs  event.rs  id.rs  lib.rs  rng.rs
crates/core/src/bus/: mod.rs
crates/core/src/cascade/: fixture.rs  helpers.rs  mod.rs  select.rs  template.rs
crates/core/src/clock/: mod.rs
crates/core/src/faker/: address.rs  card.rs  entropy.rs  mod.rs  money.rs  person.rs
crates/core/src/store/: mod.rs  schema.rs  schema.sql
crates/core/src/world/: advance.rs  chaos.rs  delivery.rs  mod.rs  mutate.rs  trigger.rs
crates/core/tests/: cascade_engine.rs  cascade_scheduler.rs  determinism.rs
crates/core/tests/fixtures/: test.checkout.complete.cascade.json  test.subscription.cancel.cascade.json  test.subscription.renew.cascade.json
crates/core/tests/fixtures/ambiguous/: test.renew.ambiguous_a.cascade.json  test.renew.ambiguous_b.cascade.json
crates/core/tests/snapshots/: cascade_engine__renewal_events.snap
crates/dashboard/: Cargo.toml
crates/dashboard/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  cascades.rs  chaos.rs  error.rs  expand.rs  form.rs  headers.rs  idempotency.rs  lib.rs  main.rs  pagination.rs  state.rs
crates/server/src/config/: chaos.rs  clock.rs  coverage.rs  deliveries.rs  events.rs  mod.rs  reset.rs  webhooks.rs
crates/server/src/resource/: mod.rs
crates/server/src/resources/: charge.rs  checkout_session.rs  customer.rs  event.rs  invoice.rs  mod.rs  payment_intent.rs  payment_method.rs  price.rs  product.rs  subscription.rs  webhook_endpoint.rs
crates/server/src/webhooks/: delivery.rs  mod.rs  sign.rs
crates/server/tests/: cascade_flows.rs  cascade_schema.rs  chaos_api.rs  config_api.rs  contract.rs  error_golden.rs  golden_resources.rs  resources_api.rs  resources_billing.rs  resources_payment.rs  resources_platform.rs  webhook_delivery.rs
crates/server/tests/common/: mod.rs
crates/server/tests/golden/: charge_create.snap  charge_retrieve.snap  checkout_session_create.snap  checkout_session_retrieve.snap  customer_create.snap  customer_retrieve.snap  event_create.snap  event_retrieve.snap  invoice_create.snap  invoice_retrieve.snap  payment_intent_create.snap  payment_intent_retrieve.snap  payment_method_create.snap  payment_method_retrieve.snap  price_create.snap  price_retrieve.snap  product_create.snap  product_retrieve.snap  subscription_create.snap  subscription_retrieve.snap  webhook_endpoint_create.snap  webhook_endpoint_retrieve.snap
crates/server/tests/snapshots/: error_golden__api_error_envelope.snap  error_golden__card_error_envelope.snap  error_golden__idempotency_error_envelope.snap  error_golden__invalid_request_envelope.snap  error_golden__not_found_envelope.snap  error_golden__unauthorized_envelope.snap  error_golden__unimplemented_envelope.snap
crates/test-support/: Cargo.toml
crates/test-support/src/: capture.rs  lib.rs  spawn.rs
docs/: COVERAGE.md
fixtures/: cascade.schema.json
tools/gen-coverage/: Cargo.toml
tools/gen-coverage/src/: main.rs
