[package]
name = "zebrafish-core"
description = "Core domain model for zebrafish: World, virtual clock, IDs, faker, cascade engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "zebrafish_core"

[lints]
workspace = true
