[package]
name = "zebrafish-dashboard"
description = "Embedded web dashboard for zebrafish (rust-embed SPA + SSE)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "zebrafish_dashboard"

[dependencies]
zebrafish-core = { workspace = true }

[lints]
workspace = true
