[package]
name = "zebrafish-server"
description = "Stripe-compatible local payment emulator — HTTP API, checkout page, webhooks, chaos."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zebrafish"
path = "src/main.rs"

[lib]
name = "zebrafish_server"

[dependencies]
zebrafish-core = { workspace = true }
zebrafish-dashboard = { workspace = true }

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

# Nested x-www-form-urlencoded splitting + percent/plus decoding (the `url`
# project's pair parser); the nesting logic on top is ours (spec §5).
form_urlencoded = "1"
# Basic-auth credential decoding (spec §5 auth shim).
base64 = "0.22"
# Idempotency-Key request-body hashing (spec §5).
sha2 = "0.10"

[dev-dependencies]
zebrafish-test-support = { workspace = true }
proptest = "1"
insta = { version = "1", features = ["json"] }
axum-test = "17"

[lints]
workspace = true
