[package]
name = "zebrafish-server"
description = "Stripe-compatible local payment emulator — HTTP API, checkout page, webhooks, chaos."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zebrafish"
path = "src/main.rs"

[lib]
name = "zebrafish_server"

[dependencies]
zebrafish-core = { workspace = true }
zebrafish-dashboard = { workspace = true }

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }

# Webhook delivery HTTP client (spec §8). No default features: deliveries go
# to local app endpoints over plain http; a TLS stack would bloat the <15 MB
# binary for a URL shape this local tool explicitly discourages. https
# endpoints record a connection-failure delivery rather than being silently
# ignored.
reqwest = { version = "0.12", default-features = false }
# Webhook signing: HMAC-SHA256 over "{t}.{raw_body}" (spec §8).
hmac = "0.12"

# Nested x-www-form-urlencoded splitting + percent/plus decoding (the `url`
# project's pair parser); the nesting logic on top is ours (spec §5).
form_urlencoded = "1"
# Basic-auth credential decoding (spec §5 auth shim).
base64 = "0.22"
# Idempotency-Key request-body hashing (spec §5).
sha2 = "0.10"
include_dir = "0.7"

[dev-dependencies]
zebrafish-test-support = { workspace = true }
proptest = "1"
insta = { version = "1", features = ["json"] }
axum-test = "17"
jsonschema = { version = "0.46.5", default-features = false, features = ["resolve-file"] }

[lints]
workspace = true
